<resources>
    <string name="app_name">BMI</string>
    <string name="bmi_main_mass_kg">Mass [kg]</string>
    <string name="bmi_main_height_cm">Height [cm]</string>
    <string name="bmi_main_count">Count</string>
    <string name="bmi_main_mass_lb">Mass [lb]</string>
    <string name="bmi_main_height_in">Height [in]</string>
    <string name="bmi_main_noEnteredMassError">Please enter mass</string>
    <string name="bmi_main_incorrectNumberError">Incorrect number!</string>
    <string name="bmi_main_imperial_massNotInRangeError">Mass has to be in range %1$d–%2$d lb</string>
    <string name="bmi_main_metric_massNotInRangeError">Mass has to be in range %1$d–%2$d kg</string>
    <string name="bmi_main_noEnteredHeightError">Please enter height</string>
    <string name="bmi_main_imperial_heightNotInRangeError">Height has to be in range %1$d–%2$d in</string>
    <string name="bmi_main_metric_heightNotInRangeError">Height has to be in range %1$d–%2$d cm</string>
    <string name="bmi_underweight">Underweight</string>
    <string name="bmi_normal">Normal</string>
    <string name="bmi_overweight">Overweight</string>
    <string name="bmi_obesity">Obese</string>
    <string name="bmi_extremeObesity">Extremely obese</string>
    <string name="bmi_about_title">What is BMI?</string>
    <string name="bmi_about_description">The body mass index (BMI) or Quetelet index is a value derived from the mass
        (weight) and height of an individual. The BMI is defined as the body mass divided by the square of the body
        height, and is universally expressed in units of kg/m2, resulting from mass in kilograms and height in metres.
    </string>
    <string name="bmi_info_activityLabel">Info</string>
    <string name="bmi_aboutMe_activityLabel">About me</string>
    <string name="bmi_info_description_underweight">Underweight: \nA BMI of under %2$s indicates that you are
        underweight, so you may
        need to put on some weight. You are recommended to ask your doctor or a dietitian for advice.
    </string>
    <string name="bmi_info_description_normal">Normal: \nA BMI of %1$s-%2$s indicates that you are at a healthy weight
        for your
        height. By maintaining a healthy weight, you lower your risk of developing serious health problems.
    </string>
    <string name="bmi_info_description_overweight">Overweight: \nA BMI of %1$s-%2$s indicates that you are slightly
        overweight. You
        may be advised to lose some weight for health reasons. You are recommended to talk to your doctor or a dietitian
        for advice.
    </string>
    <string name="bmi_info_description_obese">Obese: \nA BMI of %1$s-%2$s indicates that you are heavily overweight.
        Your health
        may be at risk if you do not lose weight. You are recommended to talk to your doctor or a dietitian for advice.
    </string>
    <string name="bmi_info_description_extremelyObese">Extremely Obese: \nA BMI of over %1$s indicates that you are
        morbidly overweight. Your
        health is certainly at risk if you do not lose weight. You are recommended to talk to your doctor immediately.
    </string>
    <string name="bmi_actionBarMenu_aboutMe">About me</string>
    <string name="bmi_actionBarMenu_changeUnits">Change units</string>
    <string name="bmi_actionBarMenu_history">History</string>
    <string name="bmi_history_activityLabel">History</string>
    <string name="bmi_pound_short_end">%1$s lb</string>
    <string name="bmi_inch_short_end">%1$s in</string>
    <string name="bmi_kilogram_short_end">%1$s kg</string>
    <string name="bmi_centimeter_short_end">%1$s cm</string>
    <string name="bmi_entry_bmi_value_header">BMI value:</string>
    <string name="bmi_entry_mass_header">Mass:</string>
    <string name="bmi_entry_height_header">Height:</string>
    <string name="bmi_entry_date_header">Date:</string>

</resources>
