<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content" tools:layout_editor_absoluteY="81dp">
    <TextView
            android:text="@string/bmi_entry_bmi_value_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryBmiValueHeader"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/bmi_entry_header_text_size"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryBmiValue" android:textSize="36sp"
            app:layout_constraintTop_toBottomOf="@+id/entryBmiValueHeader" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:text="@string/bmi_entry_mass_header"
            android:layout_width="wrap_content"
            android:id="@+id/entryMassHeader"
            android:layout_height="wrap_content" android:textSize="@dimen/bmi_entry_header_text_size"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textStyle="bold" app:layout_constraintStart_toEndOf="@+id/entryBmiValue"
            android:layout_marginStart="@dimen/bmi_entry_spacing_from_value"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryMass"
            app:layout_constraintStart_toEndOf="@+id/entryMassHeader" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/bmi_entry_data_text_size"/>
    <TextView
            android:text="@string/bmi_entry_height_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryHeightHeader"
            android:textSize="@dimen/bmi_entry_header_text_size"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/entryMassHeader" android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/entryBmiValue"
            android:layout_marginStart="@dimen/bmi_entry_spacing_from_value"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryHeight"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/entryMassHeader"
            app:layout_constraintStart_toEndOf="@+id/entryHeightHeader" android:layout_marginStart="8dp"
            android:textSize="@dimen/bmi_entry_data_text_size"/>
    <TextView
            android:text="@string/bmi_entry_date_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryDateHeader"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/entryHeightHeader"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/bmi_entry_header_text_size"
            android:textStyle="bold" app:layout_constraintStart_toEndOf="@+id/entryBmiValue"
            android:layout_marginStart="@dimen/bmi_entry_spacing_from_value"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/entryDate"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/entryHeightHeader"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/entryDateHeader"
            android:layout_marginStart="8dp" android:textSize="@dimen/bmi_entry_data_text_size"/>
    <View
            android:id="@+id/entryDivider"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toBottomOf="@+id/entryDateHeader"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>